# AI-Travel-Guide

final-main/backend/: .env
final-main/backend/ai_agent/: IMPLEMENTATION_EXAMPLE.md  README.md  attractions.md  budget.md  itinerary.md  pyproject.toml  run_agent.py  run_agent_stream.py  run_single_agent.py  test_complete_five_agent_system.py  test_complete_four_agent_system.py  test_complete_system.py  test_itinerary.py  test_three_agent_system.py  test_travel_tips.py  travel_tips.md  weather_safety.md
final-main/backend/ai_agent/src/travel_agents/: crew.py  main.py
final-main/backend/ai_agent/src/travel_agents/config/: agents.yaml  tasks.yaml
final-main/backend/src/: index.js
final-main/backend/src/controllers/: chatController.js
final-main/backend/src/models/: CollabTrip.js  booking.js
final-main/backend/src/routes/: aiPlanner.js  aiPlannerStream.js  aiSingleAgent.js  booking.js  collab.js  plans.js  safety.js
final-main/frontend/: package-lock.json  package.json  tailwind.config.js
final-main/frontend/src/: App.tsx
final-main/frontend/src/components/: AIFeaturesSection.tsx  AITravelPlanner.tsx  AgentModal.tsx  AuthModal.tsx  BookGuideModal.tsx  BookingConfirmation.tsx  Chatbot.tsx  CollabTrip.tsx  DestinationDetail.tsx  FloatingSOS.tsx  Footer.tsx  GuideBookings.tsx  GuideInfo.tsx  Header.tsx  Hotels.tsx  ItineraryPreview.tsx  MyTrips.tsx  PlansModal.tsx  SafetyCheckModal.tsx  SafetyPrompt.tsx  SavePlanConfirmation.tsx  ShareTripModal.tsx  TripPlanModal.tsx  Wishlist.tsx  notification.tsx
final-main/frontend/src/types/: index.ts
(+2 files in other folders)
