[project]
name = "travel_agents"
version = "0.1.0"
description = "travel_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "litellm>=1.75.3",
]

[project.scripts]
travel_agents = "travel_agents.main:run"
run_crew = "travel_agents.main:run"
train = "travel_agents.main:train"
replay = "travel_agents.main:replay"
test = "travel_agents.main:test"
run_with_trigger = "travel_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
